[FIX] Project alignment

--- a/css/_sections.scss
+++ b/css/_sections.scss
@@ -121,6 +121,7 @@
     
             ul {
                 margin-bottom: 3rem;
+                width: 100%;
         
                 li {
                     text-align: left;
